# nanoaltair8800

./: CMakeLists.txt  Dockerfile  Makefile.old  README.md  build.sh  toolchain-arm.cmake  version.cmake
.github/workflows/: c-cpp.yml  release.yml
daemon-container/: Dockerfile  build.sh  run.sh
firmware/: CMakeLists.txt  CMakeLists.txt.huge  altair_main.c
hardware/: .gitignore  fp-lib-table  nanoaltair.kicad_pcb  nanoaltair.pro
hardware/nanoaltair/: led_display.sch  nanoaltair-cache.lib  nanoaltair.sch  sym-lib-table
hardware/nanoaltair.pretty/: CT3121CT-ND.kicad_mod  CVS-03TB.kicad_mod  EdgeConn1x09.kicad_mod
hardware/nanoaltair/nanoaltair.pretty/: DIP3.kicad_mod
libs/: CMakeLists.txt
libs/altair8800/: CMakeLists.txt  intel8080.h  irq_controller.c  memory.c  op_codes.h  serial.c  serial.h
libs/common/: CMakeLists.txt
libs/common/config/: config.h
libs/common/sys/: buffer.c  hw_timer.h  log.h  spi.h
libs/stm32cube/: .mxproject  CMakeLists.txt  Makefile  nanoaltair.ioc
libs/stm32cube/Core/Inc/: main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
libs/stm32cube/FATFS/App/: fatfs.c
release/: CMakeLists.txt  flash_dfu.sh
releases/: .gitignore
software/: .gitignore  Makefile  STM32L4x6.svd  linux-workspace.code-workspace  windows-workspace.code-workspace
software/node/: index.js  package-lock.json  package.json
software/node/html/: index.html
software/src/: altair_main.c  callbacks.c
software/src/altair8800/: 88dcdd.c  88dcdd.h  intel8080.c  irq_controller.h  memory.h  roms.c  roms.h
software/src/config/: config.c
software/src/daemon/: daemon.c  ipc.c  ipc.h  rom_def.c  rom_def.h  support.c  support.h
software/src/sys/: atomic_lock.h  buffer.h  filesystem.h  hw_timer.c  log.c  profiler.c  profiler.h  spi.c  switches.c  switches.h  syscalls.c  timer.h  usb.c  usb.h
software/src/sys/arm/: filesystem.c
software/src/sys/pc/: filesystem_pc.c
software/stm32cube/: STM32L496RETx_FLASH.ld
software/stm32cube/Core/Src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
software/stm32cube/FATFS/App/: fatfs.h
software/stm32cube/USB_DEVICE/App/: usbd_cdc_if.c  usbd_desc.c
software/test/: altair_tests.c  testing.c  testing.h
software/test/test_data/: bdsc.dsk  cpm3_v1.0_48K_disk1.dsk  cpm3_v1.0_56k_build.dsk  cpm63k.dsk  cpu_tests.dsk
tests/: CMakeLists.txt  altair_tests.c  testing.h
tests/test_data/: 8K Basic Ver 4-0.tap  cpm48k.dsk  cpm56k.dsk  sysdev.dsk
